feat(polkadot connector): add deploy testcase with method
